<resources>
    <string name="app_name">Soccer News</string>
    <string name="title_news">News</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_notifications">Notifications</string>
    <string name="txt_open_link">Open Link</string>
    <string name="cd_news_image">News image.</string>
    <string name="cd_favorite_icon">Favorite icon</string>
    <string name="cd_share_icon">Share</string>
</resources>